# ChangeLog for dev-ruby/webmock
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/webmock/ChangeLog,v 1.27 2014/04/05 14:08:25 mrueg Exp $

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> webmock-1.7.4.ebuild:
  Remove ree18 and ruby18 target.

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> webmock-1.7.4.ebuild:
  Stable for x86, wrt bug #448672

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> webmock-1.7.4.ebuild:
  Stable for amd64, wrt bug #448672

  26 Dec 2012; Hans de Graaff <graaff@gentoo.org> -webmock-1.6.4.ebuild:
  Cleanup.

*webmock-1.7.4 (20 Aug 2011)

  20 Aug 2011; Hans de Graaff <graaff@gentoo.org> +webmock-1.7.4.ebuild:
  Version bump.

  17 Aug 2011; Hans de Graaff <graaff@gentoo.org> -webmock-1.6.1.ebuild,
  -webmock-1.6.2.ebuild:
  Remove old versions.

  13 Jul 2011; Hans de Graaff <graaff@gentoo.org> webmock-1.6.4.ebuild:
  Add jruby support.

*webmock-1.6.4 (20 May 2011)

  20 May 2011; Hans de Graaff <graaff@gentoo.org> +webmock-1.6.4.ebuild:
  Version bump.

  09 Apr 2011; Hans de Graaff <graaff@gentoo.org> -webmock-0.9.1.ebuild,
  -webmock-1.3.5.ebuild, -webmock-1.4.0.ebuild:
  Remove old versions.

  27 Feb 2011; Hans de Graaff <graaff@gentoo.org> webmock-1.4.0.ebuild,
  webmock-1.6.1.ebuild, webmock-1.6.2.ebuild:
  Move ppc64 keyword forward as intended.

  26 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> webmock-1.3.5.ebuild:
  Marked ~ppc64 wrt #339565

*webmock-1.6.2 (14 Jan 2011)

  14 Jan 2011; Hans de Graaff <graaff@gentoo.org> +webmock-1.6.2.ebuild:
  Version bump.

  27 Dec 2010; Fabian Groffen <grobian@gentoo.org> webmock-1.6.1.ebuild:
  Added Prefix keywords

*webmock-1.6.1 (28 Nov 2010)

  28 Nov 2010; Hans de Graaff <graaff@gentoo.org> +webmock-1.6.1.ebuild:
  Version bump. Drop patches that have been applied upstream.

  22 Oct 2010; Christian Faulhammer <fauli@gentoo.org> webmock-1.4.0.ebuild:
  keyworded ~arch for x86, bug 339565
