@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX webmock-1.4.0-network-specs.patch 1068 SHA256 e07445986dd7743bfebd3e0cfd5ee254f7c196273f5dae6a93ac56bc2e96eb82 SHA512 4f1ffc1a3868d6036ab16f398864f3e4f2b1e26c11a23e26aca6c3e771b37874642a627d36b7326250e0bf2c81cbefdb5d9d05127efa238bea7acba5e4ff2b78 WHIRLPOOL 5e9d25881988b36a3539667f332ba54cc6573a8239d1bb6475622abca9ed16453372ef2b8185d9023e5464259424799b4ea5091f0e7adc8fd840c2a309945d36
 AUX webmock-1.4.0-tmpdir.patch 482 SHA256 429e27a3a7fb0b74ae164973296c1cc8c1ac1415dedc7e55f198522f32d1cfa2 SHA512 c558b1d75f971d6b9b56fb8e651ee49661819fe25162c5c8d268d5a7124df1b4e5198d9d6cfafcd534679ae22348d5fb440ad6c9d3fb77e2397781c93f2f03da WHIRLPOOL a6a10cfbb831adf86bdc2a535e330c18cdda9d17c93b8bd603b635c73ff9da4a3af4dd6230e2e91b4b1c52a3c05027fb8d170265a166706ea18b967d226d4983
+DIST webmock-1.18.0.gem 94208 SHA256 0360485651dfe94675a36f546367e2bb075570ab879fdb311b4bd2763a5141e4 SHA512 c18ff1a0ca146be783f801a766f059ea985bbfe2367115579698cd650b140872efa7b7c63e638b1940256a5e392d4f198ac27d3572d3f8c38ec4ac580a27cb1e WHIRLPOOL 0f3d6722a9a5ba8528d88f75b0351e8fe4eb6413b45be1b97fe2fecb9ccd9857611fabf5d15ece6f55ddc390870a09d675f3d29d3bd721cfca56f69563fdc5a2
 DIST webmock-1.7.4.gem 87552 SHA256 91d73775782024ec1438df6669c9b534009d6d14031243c9674764ca6598aacb SHA512 05d705446308445b43798be17fb4a27b72c18e92f61bd301cdb8d24ce587dfd3e31bf8e8f856648f801725884874beeed5998d0930195a24a68fb65ea7e613b5 WHIRLPOOL 7234619fab15267617acbff94f9eb081bafc8e3b71e13d699424158aff326d1678f6f66430a29d015e05f7c97d30f41b7dce1cb899c32c243bbf152c3e20f382
+EBUILD webmock-1.18.0.ebuild 1644 SHA256 abb424c19f490139689de5b7aff104af17667c6df5dfea3da3483d271db6022c SHA512 a502cefca7dbf938fa763d89bd9cabd024b2907cc5eac61d6b36330b482d2906c788f302ddcfd33306d0ec878d9a95006a99342519d1547a4827dead4af44300 WHIRLPOOL c18435a6e89fc8e009f5ecc3538da331b72914a247c5ef0a74af341d538616ba685cae2d653c4596625bdc74a97c285815f11e40d29c673cbc5e4ae624433fb2
 EBUILD webmock-1.7.4.ebuild 1303 SHA256 210662b74356fc27cf74f39853b9be9cbf544812d8a82a27f77c1e08fad606ba SHA512 bc4fbec34a237850cee54fb5e0ae726fba565e0b506f6f0678d29b7d2f0ffc530b928326638cf374dc370d750bfe1d86a6674bfb653487277a0c450f8838ac81 WHIRLPOOL 4395091766ec9ee5a104bea1572cb4571f1902ea2c874ff4f5957eab40d687f5e3c51ac2ab1def7d45303304943968c544f2987772ced0f6646c3bddfc5fe89f
-MISC ChangeLog 3774 SHA256 7754ba358d63fcc989d3afa2dcee88d218f9566623bada51660497a9b2441555 SHA512 618fc963a8b742185eed2a9ad3825caccc98e1c2213ce778d02f663c6f52e85023ffd4807cd6c894dba5b00f7706870dff056fd5446721ff5d8a88582853638e WHIRLPOOL d9e38468e3cd0b631e5fc8d69ffe61fce27d1f5d7af552d04f962db1cd535f659b480b4e6758a69400e3aefa1c3ec63e41b044af9428313b75200eba023ac03c
+MISC ChangeLog 3967 SHA256 bbb2009885a51b2024aafe2061165c8fe311d854c8969737e7fc51e74768c60d SHA512 3cf364d6ee947c71c87be100f8253407a425ff2993bda827bfa23832a38b30f0a1869ccf86c804425047064c1749ecab7cdb0067e1d0c13fabac6042ddfc61f4 WHIRLPOOL 88128b0186e0f333dbeedb1243706c8a2ca306a052c3c560fe98b2708d101e5a1d9225a160e27f2b092e373e437e054a279fa942715fb0ef99b234530fa57656
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlOAUaIACgkQiIP6VqMIqNecfwD/U+/hoeWhdhTuoQliUPgeU+r7
+bsqZXMLx/hkHYoN4JN0A/RaSmQEhP4trBjC3twt230g+iCVHw2enVLfwEpfp/MEp
+=yMy1
+-----END PGP SIGNATURE-----
