@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/webmock
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/webmock/ChangeLog,v 1.27 2014/04/05 14:08:25 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/webmock/ChangeLog,v 1.28 2014/05/24 08:00:26 graaff Exp $
+
+*webmock-1.18.0 (24 May 2014)
+
+  24 May 2014; Hans de Graaff <graaff@gentoo.org> +webmock-1.18.0.ebuild:
+  Version bump. Add ruby20. Drop ppc64, x86 due to new test dependency, bug
+  511176.
 
   05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> webmock-1.7.4.ebuild:
   Remove ree18 and ruby18 target.
